--- a/Exercises/main.ipynb
+++ b/Exercises/main.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "__author__ = 'Fiona C. Pärli'\n",
+    "__email__ = 'fiona.paerli@students.unibe.ch'\n",
+    "__date__ = 'June 2025'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
